Added not rated message, fixed history modal, fixed favorites modal, fixed more info modal

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 <body>
     <div class="row headercolor">
         <div class="container">
-            <div class="col-xs-9">
+            <div class="col-xs-8">
                 <div class="header">
                     <h1><span><img class="dice" src="./assets/images/blackoutlinedice.jpg"></span>Yahptions</h1>
                 </div>
             </div>
-            <div class="col-xs-3">
+            <div class="col-xs-4">
                 <div class="headeroptions">
                     <button type="button" class="btn btn-default" id="showHistoryModal" aria-label="Left Align"><span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span></button>
                     <button type="button" class="btn btn-default heart" id="showFavoriteModal" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
@@ -190,7 +190,7 @@
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body text-center">
+                <div class="modal-body text-left">
                     <div id="favorites">
                         Favorites
                     </div>
@@ -209,12 +209,12 @@
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header bg-danger">
-                    <h4 class="modal-title" id="modalTitle">History Modal</h4>
+                    <h4 class="modal-title" id="modalTitle">History</h4>
                     <button type="button" class="close hideHistoryModal" data-dismiss="modal" id="hideModal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body text-center">
+                <div class="modal-body text-left">
                     <div id="history">
                     </div>
                 </div>
@@ -239,7 +239,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
@@ -265,7 +265,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
@@ -291,7 +291,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
@@ -317,7 +317,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
@@ -343,7 +343,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
