added styling and rules/messages

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
         </div>
     </div>
-    <div class="row rulesheight text-center">
-            <p class="rules text-center"></p>
+    <div class="row rulesHeight text-center">
+            <p class="rules text-center" id="rules"></p>
     </div>
     <div class="backgroundimg">
         <div class="container ">
@@ -239,7 +239,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
@@ -265,7 +265,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
@@ -291,7 +291,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
@@ -317,7 +317,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
@@ -343,7 +343,7 @@
                     </button>
                 </div>
                 <div class="modal-body text-center">
-                    <h4 id="infoName">Name: </h4>
+                    <h3 id="infoName">Name: </h3>
                     <p><img id="infoImg" class="img-responsive"></p>
                     <h4 id="infoRating">Rating:</h4>
                     <h4 id="infoCuisines">Type:</h4>
