added more styling

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         </div>
     </div>
     <div class="row rulesHeight text-center">
+        <div class="container">
             <p class="rules text-center" id="rules"></p>
+        </div>
     </div>
     <div class="backgroundimg">
         <div class="container ">
@@ -64,7 +66,7 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons">
+                        <div class="optionButtons option-info-panel-0">
                             <button type="button" class="btn btn-default infoBtn" data-index="0" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-0 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
@@ -78,7 +80,7 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons">
+                        <div class="optionButtons option-info-panel-1">
                             <button type="button" class="btn btn-default infoBtn" data-index="1" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-1 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
@@ -92,7 +94,7 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons">
+                        <div class="optionButtons option-info-panel-2">
                             <button type="button" class="btn btn-default infoBtn" data-index="2" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-2 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
@@ -106,7 +108,7 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons">
+                        <div class="optionButtons option-info-panel-3">
                             <button type="button" class="btn btn-default infoBtn" data-index="3" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-3 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
@@ -120,7 +122,7 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons">
+                        <div class="optionButtons option-info-panel-4">
                             <button type="button" class="btn btn-default infoBtn" data-index="4" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-4 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
