--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div id="option-cards">    
                     <div class="row">
                     <div class="col-xs-12 col-sm-4 col-lg-2 outer-div">
-                        <div class="option-0 locationCard handpointer" data-state="chooseRestaurant" search-result="">
+                        <div class="option-0 locationCard handpointer" data-count="0" data-state="chooseRestaurant" search-result="">
                             <div class="cardclass">
                                 <h3 class="restaurantName">Restaurant1</h3>
                                 <img id="placeholder" src="http://via.placeholder.com/200X300" class="img-responsive">
@@ -66,13 +66,13 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons option-info-panel-0">
+                        <div class="optionButtons" id="option-info-panel-0">
                             <button type="button" class="btn btn-default infoBtn" data-index="0" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-0 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-4 col-lg-2 outer-div">
-                        <div class="option-1 locationCard handpointer" data-state="chooseRestaurant" search-result="">
+                        <div class="option-1 locationCard handpointer" data-count="1" data-state="chooseRestaurant" search-result="">
                             <div class="cardclass" >
                                 <h3 class="restaurantName">Restaurant2</h3>
                                 <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
@@ -80,13 +80,13 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons option-info-panel-1">
+                        <div class="optionButtons" id="option-info-panel-1">
                             <button type="button" class="btn btn-default infoBtn" data-index="1" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-1 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-4 col-lg-2 outer-div">
-                        <div class="option-2 locationCard handpointer" data-state="chooseRestaurant" search-result="">
+                        <div class="option-2 locationCard handpointer" data-count="2" data-state="chooseRestaurant" search-result="">
                             <div class="cardclass">
                                 <h3 class="restaurantName">Restaurant3</h3>
                                 <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
@@ -94,13 +94,13 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons option-info-panel-2">
+                        <div class="optionButtons" id="option-info-panel-2">
                             <button type="button" class="btn btn-default infoBtn" data-index="2" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-2 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-4 col-lg-2 outer-div">
-                        <div class="option-3 locationCard handpointer" data-state="chooseRestaurant" search-result="">
+                        <div class="option-3 locationCard handpointer" data-count="3" data-state="chooseRestaurant" search-result="">
                             <div class="cardclass">
                                 <h3 class="restaurantName">Restaurant4</h3>
                                 <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
@@ -108,13 +108,13 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons option-info-panel-3">
+                        <div class="optionButtons" id="option-info-panel-3">
                             <button type="button" class="btn btn-default infoBtn" data-index="3" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-3 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-4 col-lg-2 outer-div">
-                        <div class="option-4 locationCard handpointer" data-state="chooseRestaurant" search-result="">
+                        <div class="option-4 locationCard handpointer" data-count="4" data-state="chooseRestaurant" search-result="">
                             <div class="cardclass">
                                 <h3 class="restaurantName">Restaurant5</h3>
                                 <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
@@ -122,7 +122,7 @@
                             <h4 id="cuisines"></h4>
                             <h4 id="rating">Rating: </h4>
                         </div>
-                        <div class="optionButtons option-info-panel-4">
+                        <div class="optionButtons" id="option-info-panel-4">
                             <button type="button" class="btn btn-default infoBtn" data-index="4" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default heartBtn-4 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
