--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" type="text/css" href="./assets/css/animate.css" />
         <!--Google Font-->
         <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
+        <link rel="icon" href="./assets/images/tabicon.png">
 </head>
 <body>
     <div class="row headercolor">
